--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "axios": "^0.19.0",
     "formik": "^1.5.8",
+    "modali": "^1.2.0",
+    "qrcode.react": "^0.9.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-qr-scanner": "^0.0.8",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.2",
     "semantic-ui-react": "^0.88.1",
